added mouse tracing, key movement and snake segment max angles